Moodle funciona. Falta integrar NextCloud + Onlyoffice.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,22 @@
 version: '3'
 
+networks:
+  onlyoffice:
+    driver: bridge
+
+volumes:
+  document_data: null
+  document_log: null
+  document_forgotten: null
+  community_data: null
+  community_log: null
+  mysql_data: null
+  nextcloud: null
+  moodle: null
+
 services:
-  onlyoffice-mysql-server:
-    container_name: onlyoffice-mysql-server
+  mysql:
+    container_name: mysql
     image: 'mysql:5.7.20'
     environment:
       - MYSQL_ROOT_PASSWORD=my-secret-pw
@@ -24,6 +38,8 @@ services:
     restart: always
     networks:
       - onlyoffice
+    # environment:
+      - VIRTUAL_HOST=onlyoffice-document.test
     expose:
       - '80'
       - '443'
@@ -43,6 +59,7 @@ services:
       - '80:80'
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
+      # - nextcloud:/var/www/html:ro
     networks:
       - onlyoffice
 
@@ -50,14 +67,14 @@ services:
     container_name: onlyoffice-community-server
     image: 'onlyoffice/communityserver:latest'
     depends_on:
-      - onlyoffice-mysql-server
+      - mysql
       - onlyoffice-document-server
       - nginx-proxy
     environment:
       - DOCUMENT_SERVER_PORT_80_TCP_ADDR=onlyoffice-document-server
       - MYSQL_SERVER_ROOT_PASSWORD=my-secret-pw
       - MYSQL_SERVER_DB_NAME=onlyoffice
-      - MYSQL_SERVER_HOST=onlyoffice-mysql-server
+      - MYSQL_SERVER_HOST=mysql
       - MYSQL_SERVER_USER=onlyoffice_user
       - MYSQL_SERVER_PASS=onlyoffice_pass
       - VIRTUAL_HOST=onlyoffice.test
@@ -76,14 +93,76 @@ services:
       - 'document_data:/var/www/onlyoffice/DocumentServerData'
       - './certs:/var/www/onlyoffice/Data/certs'
 
-networks:
-  onlyoffice:
-    driver: bridge
+  nextcloud:
+    container_name: nextcloud
+    image: nextcloud:apache
+    environment:
+      - VIRTUAL_HOST=nextcloud.test
+      - MYSQL_HOST=mysql
+      - MYSQL_PASSWORD=nextcloud_pass
+      - MYSQL_DATABASE=nextcloud
+      - MYSQL_USER=nextcloud_user
+    expose:
+      - '80'
+      - '443'
+    depends_on:
+      - mysql
+      - nginx-proxy
+    volumes:
+      - nextcloud:/var/www/html
+    stdin_open: true
+    tty: true
+    restart: always
+    networks:
+      - onlyoffice
 
-volumes:
-  document_data: null
-  document_log: null
-  document_forgotten: null
-  community_data: null
-  community_log: null
-  mysql_data: null
+  # nextcloud:
+  #   container_name: nextcloud
+  #   image: nextcloud:fpm
+  #   stdin_open: true
+  #   tty: true
+  #   restart: always
+  #   environment:
+  #     - VIRTUAL_HOST=nextcloud.test
+  #     - MYSQL_HOST=mysql
+  #     - MYSQL_PASSWORD=nextcloud_pass
+  #     - MYSQL_DATABASE=nextcloud
+  #     - MYSQL_USER=nextcloud_user
+  #   expose:
+  #     - '80'
+  #     - '9000'
+  #   depends_on:
+  #     - mysql
+  #     - nginx-proxy
+  #   networks:
+  #     - onlyoffice
+  #   volumes:
+  #     - nextcloud:/var/www/html
+
+  moodle:
+    container_name: moodle
+    build:
+      context: ../docker-moodle
+      dockerfile: Dockerfile
+    image: moodle:v34
+    environment:
+      - VIRTUAL_HOST=moodle.test
+      - MYSQL_HOST=mysql
+      - MYSQL_PASSWORD=moodle_pass
+      - MYSQL_DATABASE=moodle
+      - MYSQL_USER=moodle_user
+    expose:
+      - '80'
+      - '443'
+    depends_on:
+      - mysql
+      - nginx-proxy
+    volumes:
+      - moodle:/moodle/data
+      - ./moodle-config.php:/var/www/html/config.php:ro
+    stdin_open: true
+    tty: true
+    restart: always
+    networks:
+      - onlyoffice
+
